refactor: 우승자 추출과 출력 로직 분리 및 클래스 역할 개선
- `getWinnerCars` 메서드를 통해 우승자 목록을 반환하고 `PrintResult`가 이를 출력하도록 분리
- `moveCars` 메서드에서 `PrintResult`를 의존성 주입 방식으로 받아 각 라운드마다 자동차 위치 출력
- `InputParser`를 독립적인 입력 파싱 전용 클래스로 설계하여 `GameController`에 의존하지 않도록 개선